--- a/curriculum/templates/curriculum/cv_pdf.html
+++ b/curriculum/templates/curriculum/cv_pdf.html
@@ -70,7 +70,7 @@
     <table style="margin-bottom: 30px;">
         <tr>
             <td width="20%" valign="top">
-                {% if perfil.foto %}<img src="{{ perfil.foto.path }}" class="profile-img">{% else %}<div style="width:140px; height:140px; background:#F0F4F5; border:4px solid #BBD2D6; border-radius:15px;"></div>{% endif %}
+                {% if perfil.foto %}<img src="{{ perfil.foto.url }}" class="profile-img">{% else %}<div style="width:140px; height:140px; background:#F0F4F5; border:4px solid #BBD2D6; border-radius:15px;"></div>{% endif %}
             </td>
             <td width="80%" style="padding-left: 25px;">
                 <table>
