--- a/curriculum/templates/curriculum/cursos.html
+++ b/curriculum/templates/curriculum/cursos.html
@@ -30,7 +30,7 @@
     
                 <div class="relative h-56 w-full bg-[#F0F4F5] overflow-hidden border-b border-gray-100 group cursor-pointer"
                      {% if curso.certificado_pdf %}
-                        onclick="openModal('{{ curso.get_preview_url }}', '{{ curso.nombre_curso }}')"
+                        onclick="openModal('{{ curso.get_preview_url }}', '{{ curso.nombre_curso|escapejs }}')"
                      {% endif %}>
                     
                     {% if curso.certificado_pdf %}
@@ -123,7 +123,7 @@
         
         modal.classList.remove('hidden', 'opacity-0', 'pointer-events-none');
         modal.classList.add('flex', 'opacity-100', 'pointer-events-auto');
-        document.body.style.overflow = 'hidden'; // Evitar scroll de fondo
+        document.body.style.overflow = 'hidden'; 
     }
 
     function closeModal() {
@@ -136,11 +136,10 @@
             modal.classList.add('hidden');
             modal.classList.remove('flex');
             document.getElementById('modalImage').src = '';
-            document.body.style.overflow = 'auto'; // Restaurar scroll
+            document.body.style.overflow = 'auto'; 
         }, 300);
     }
 
-    // Cerrar con tecla ESC
     document.addEventListener('keydown', function(event) {
         if (event.key === "Escape") {
             closeModal();
