--- a/curriculum/templates/curriculum/inicio.html
+++ b/curriculum/templates/curriculum/inicio.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="shrink-0">
-                    <div class="relative w-48 h-48 md:w-64 md:h-64 flex items-center justify-center">
+                    <div id="photo-container" class="relative w-48 h-48 md:w-64 md:h-64 flex items-center justify-center">
                         <div class="steam-frame absolute inset-0 rounded-[2.5rem]"></div>
                         <div class="relative z-10 w-[calc(100%-8px)] h-[calc(100%-8px)] bg-white rounded-[2.2rem] overflow-hidden border-4 border-white shadow-inner">
                             {% if perfil.foto %}<img src="{{ perfil.foto.url }}" alt="{{ perfil.nombres }}" class="w-full h-full object-cover">{% else %}<div class="w-full h-full bg-gray-50 flex items-center justify-center text-gray-300"><i data-lucide="user" size="64" class="opacity-20"></i></div>{% endif %}
